stylesheet.less
/* ... */
/* ===============================
   TWEET THIS WIDGET
   =============================== */

.widget.tweet {
   padding: 14px 0; 
}



/* ==================================
   SOCIAL BAR WIDGET / SOCIAL PROFILE
   =============================== */

.widget.socialicons, .widget.profile .bk-profile-socialicons {
    padding: 9px 0;
    font-size:1em;
    font-family:@font-swatch7-font-family;
}

.widget.socialicons a, .widget.profile .bk-profile-socialicons a {
    text-decoration: none;
    text-indent: -9999px;
    white-space: nowrap;
}

.widget.profile .bk-profile-socialicons span {
  display: inline-block;
}

.widget.socialicons span a, .widget.profile .bk-profile-socialicons span a {
    display: inline-block;
    margin-right: 6px;
    margin-bottom: 6px;
    background-size: 18px;
    width: 32px;
    height: 32px;
    background-color: lighten(@color-swatch4,10%);
    background-repeat: no-repeat;
    background-position: center;
    -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
          border-radius: 30px;
}

.widget.socialicons span a:hover, .widget.profile 
.bk-profile-socialicons span a:hover {
    background-color: lighten(@color-swatch4,15%);
}

/* SVG ICONS */

.svg .widget.socialicons span.bk-socialicons-twitter a,
.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
    background-image: image('/images/social/socialicons-twitter.svg');
}

.svg .widget.socialicons span.bk-socialicons-linkedin a,
.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a {
    background-image: image('/images/social/socialicons-linkedin.svg')
}

.svg .widget.socialicons span.bk-socialicons-facebook a,
.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a {
    background-image: image('/images/social/socialicons-facebook.svg')
}

.svg .widget.socialicons span.bk-socialicons-rss a,
.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-rss a {
    background-image: image('/images/social/socialicons-rss.svg')
}

.svg .widget.socialicons span.bk-socialicons-googleplus a,
.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a {
    background-image: image('/images/social/socialicons-googleplus.svg')
}

.svg .widget.socialicons span.bk-socialicons-youtube a,
.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
    background-image: image('/images/social/socialicons-youtube.svg')
}

/* PNG ICONS */

.widget.socialicons span.bk-socialicons-twitter a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
    background-image: image('/images/social/socialicons-twitter.png');
}

.widget.socialicons span.bk-socialicons-linkedin a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a {
    background-image: image('/images/social/socialicons-linkedin.png')
}

.widget.socialicons span.bk-socialicons-facebook a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a {
    background-image: image('/images/social/socialicons-facebook.png')
}

.widget.socialicons span.bk-socialicons-rss a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-rss a {
    background-image: image('/images/social/socialicons-rss.png')
}

.widget.socialicons span.bk-socialicons-googleplus a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a {
    background-image: image('/images/social/socialicons-googleplus.png')
}

.widget.socialicons span.bk-socialicons-youtube a,
.widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
    background-image: image('/images/social/socialicons-youtube.png')
}



/* ===============================
   PROFILE WIDGET
   =============================== */

.widget.profile span, .widget.profile a {
  display: block;
  font-family: @font-swatch5-font-family;
  font-size: @font-swatch5-font-size;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
}
.widget.profile a {
  color: @color-swatch2;
}

.widget.profile a:hover {
  color: darken(@color-swatch2, 10%);
  text-decoration: none;
}

/* FOOTER PROFILE - TWITTER */

.widget.profile ul.twitter {
  padding: 0px;
  margin: 0px;
}

.widget.profile ul.twitter li {
  list-style: none;
}

.widget.profile ul.twitter img, .widget.profile ul.twitter time,
.widget.profile ul.twitter span {
  display: none;
}

/* FOOTER PROFILE - SIGNUP FORM */

.widget.profile form {
  padding: 0px;
}

.widget.profile form fieldset {
  padding: 0;
  border: 0;
  margin: 0;
}







/* ===============================
   MAP WIDGET
   =============================== */

.widget.map  {
  margin: 0px;
  padding: 20px;
  background-color: lighten(@color-swatch5,22%);
}

.widget.map .map {

}


/* ===============================
   SIGNUP FORM WIDGET
   =============================== */

.widget.signupform {
  padding: 0px;
}

.widget.signupform fieldset {
  padding: 0;
  border: 0;
  margin: 0;
}
/* ... */

